--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^4.0.0",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
+    "express-stormpath": "^3.2.0",
     "mongodb": "^2.2.22",
     "mongoose": "^4.7.8",
     "promise-polyfill": "^6.0.2",
