--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Chival Trotman",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "chart.js": "^2.4.0",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.5",
