--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
     "react-stormpath": "^2.0.0",
+    "webpack": "^1.14.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
