--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
   "author": "Chival Trotman",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
     "body-parser": "^1.17.1",
     "chart.js": "^2.4.0",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.5",
+    "exports-loader": "^0.6.4",
     "express": "^4.14.0",
     "express-stormpath": "^3.2.0",
+    "imports-loader": "^0.7.1",
     "mongodb": "^2.2.22",
     "mongoose": "^4.7.8",
     "promise-polyfill": "^6.0.2",
@@ -26,6 +33,8 @@
     "react-router": "^3.0.2",
     "react-stormpath": "^2.0.0",
     "webpack": "^1.14.0",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-dev-server": "^1.16.3",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
