--- a/package.json
+++ b/package.json
@@ -23,15 +23,19 @@
     "express": "^4.14.0",
     "express-stormpath": "^3.2.0",
     "imports-loader": "^0.7.1",
+    "isemail": "^3.0.0",
+    "jsonwebtoken": "^7.4.1",
+    "jwt-decode": "^2.2.0",
+    "jwt-decode-module": "^1.0.4",
     "mongodb": "^2.2.22",
     "mongoose": "^4.7.8",
+    "password-hash": "^1.2.2",
     "promise-polyfill": "^6.0.2",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-document-title": "^2.0.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
-    "react-stormpath": "^2.0.0",
     "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-dev-server": "^1.16.3",
