--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "body-parser": "^1.17.1",
     "chart.js": "^2.4.0",
+    "compression": "^1.7.1",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.5",
     "exports-loader": "^0.6.4",
